--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,9 +59,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - images/
+    - icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -77,7 +77,19 @@ flutter:
   fonts:
     - family: Fredoka
       fonts:
-        - asset: fonts/Fredoka.ttf
+        - asset: fonts/Fredoka-SemiBold.ttf
+    - family: Oswald
+      fonts:
+        - asset: fonts/Oswald-Regular.ttf
+    - family: FreckleFace
+      fonts:
+        - asset: fonts/FreckleFace-Regular.ttf
+    - family: ABeeZee
+      fonts: 
+        - asset: fonts/ABeeZee-Regular.ttf
+    - family: Bayon
+      fonts: 
+        - asset: fonts/Bayon-Regular.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
